# rational

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
include/nira/: fixed_point.hpp  rational.hpp
include/rational/: rational.hpp
tests/: CMakeLists.txt  fixed_point.cpp  rational.cpp  test.cpp
